--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,9 +1,11 @@
-<h1>Eric Wang</h1>
-<table>
-    <tr>
-        <td><a href=".">Home</a></td>
-        <td><a href=".">Home</a></td>
-        <td><a href=".">Home</a></td>
-    </tr>
-</table>
-<hr>
+<table style="border-top:none; border-bottom:none">
+     <h1>Menu</h1>
+     <tr>
+         <td><a href=".">Home</a></td>
+         <td><a href="./tech">Tech Talk</a></td>
+         <td><a href="./team">Team Github</a></td>
+         <td><a href="./repl">Replit</a></td>
+          <td><a href="./about">About Me</a></td>
+     </tr>
+ </table>
+ <hr>
