--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -3,7 +3,7 @@
      <tr>
          <td><a href=".">Home</a></td>
          <td><a href="./tech">Tech Talk</a></td>
-         <td><a href="./tech">Team Github</a></td>
+         <td><a href="./team">Team Github</a></td>
          <td><a href="./repl">Replit</a></td>
          <td><a href="./about">About Me</a></td>
      </tr>
